--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "eslint ."
 	},
 	"dependencies": {
 		"@ricky0123/vad-react": "^0.0.28",
@@ -14,10 +14,10 @@
 		"@vercel/analytics": "^1.5.0",
 		"clsx": "^2.1.1",
 		"groq-sdk": "^0.19.0",
-		"next": "15.3.0",
+		"next": "16.0.7",
 		"onnxruntime-web": "^1.21.0",
-		"react": "19.1.0",
-		"react-dom": "19.1.0",
+		"react": "19.2.1",
+		"react-dom": "19.2.1",
 		"sonner": "^2.0.3",
 		"zod": "^3.24.2",
 		"zod-form-data": "^2.0.7"
@@ -25,10 +25,10 @@
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.3",
 		"@types/node": "^22",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
+		"@types/react": "19.2.7",
+		"@types/react-dom": "19.2.3",
 		"eslint": "^9",
-		"eslint-config-next": "15.3.0",
+		"eslint-config-next": "16.0.7",
 		"postcss": "^8",
 		"tailwindcss": "^4.1.3",
 		"typescript": "^5"
